# kroki

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml  run  setup.py
.github/workflows/: codeql-analysis.yml  tests.yml
sphinx_kroki/: __init__.py  sphinx_kroki.py
sphinxcontrib/kroki/: __init__.py  kroki.py  transform.py  util.py  writers.py
src/sphinxcontrib/kroki/: __init__.py  kroki.py  transform.py
tests/: conftest.py  test_kroki.py
tests/fixtures/test-kroki/: conf.py  index.rst
