[tool.poetry]
name = "sphinxcontrib-kroki"
version = "1.3.0"
description = "Kroki integration into sphinx"
license = "MIT"
authors = ["Martin Hasoň <martin.hason@gmail.com>"]
readme = "README.md"
repository = "https://github.com/sphinx-contrib/kroki"
classifiers = [
    "Framework :: Sphinx :: Extension",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
  { include = "sphinxcontrib", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.6"
sphinx = "*"
requests = "^2.4.2"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
mypy = "*"
coverage = "*"
pytest = "*"
pytest-cov = "*"

[tool.pytest.ini_options]
markers = [
    "sphinx: run test in sphinx project",
]

[tool.black]
line-length = 79


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
