[tool.poetry]
name = "sphinxcontrib-kroki"
version = "1.3.0"
description = "Kroki integration into sphinx"
license = "MIT"
authors = ["Martin Hasoň <martin.hason@gmail.com>"]
readme = "README.md"
repository = "https://github.com/sphinx-contrib/kroki"
classifiers = [
    "Framework :: Sphinx :: Extension",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
  { include = "sphinxcontrib", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8.1"
sphinx = "^6"
requests = "^2.4.2"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
flake8 = "^6.1.0"
mypy = "^1.6.1"
coverage = "^7.3.2"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[tool.pytest.ini_options]
markers = [
    "sphinx: run test in sphinx project",
]

[tool.black]
line-length = 79


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
